infrastructure/base/apiserver-loadbalancer/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: api-server-ha
  annotations:
    metallb.universe.tf/allow-shared-ip: "true"
  labels:
    k8s-app: api-server-ha
spec:
  selector:
    name: api-server-ha
  type: LoadBalancer
  loadBalancerIP: "$(SVC_KUBERNETES_API_PUBLIC)"
  ports:
    - port: 6443
      targetPort: 6443
