infrastructure/base/apiserver-loadbalancer/ingressroute-tcp.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: apiserver
spec:
  entryPoints:
    - kubeapi
  routes:
    - match: HostSNI(`*`)
      services:
        - name: "service"
          namespace: "namespace"
          port: 6443
